--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "expo": "~46.0.13",
+    "expo-barcode-scanner": "~11.4.0",
     "expo-status-bar": "~1.4.0",
+    "qrcode": "^1.5.1",
     "react": "18.0.0",
     "react-native": "0.69.6"
   },
